force-app/main/default/objects/InvoiceLine__c/InvoiceLine__c.object-meta.xml
<CustomObject>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>INV-LINE-{0000000000}</displayFormat>
        <label>Invoice Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>