force-app/main/default/objects/InvoiceLine__c/fields/AmountDiscount__c.field-meta.xml
<CustomField>
    <fullName>AmountDiscount__c</fullName>
    <label>Amount Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>