force-app/main/default/objects/InvoiceLine__c/fields/Billing_Event_ItemId__c.field-meta.xml
<CustomField>
    <fullName>Billing_Event_ItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Event Item</label>
    <referenceTo>pse__Billing_Event_Item__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>