force-app/main/default/objects/InvoiceLine__c/fields/Description_long__c.field-meta.xml
<CustomField>
    <fullName>Description_long__c</fullName>
    <label>Description_long</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>