force-app/main/default/objects/InvoiceLine__c/fields/Description_Rich__c.field-meta.xml
<CustomField>
    <fullName>Description_Rich__c</fullName>
    <label>Description (Rich)</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>