force-app/main/default/objects/InvoiceLine__c/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <formula>IF(ISPICKVAL( DiscountType__c , &quot;Percentage&quot;), Discount__c * TotalPrice__c, AmountDiscount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>