force-app/main/default/objects/InvoiceLine__c/fields/DiscountType__c.field-meta.xml
<CustomField>
    <fullName>DiscountType__c</fullName>
    <label>DiscountType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>