force-app/main/default/objects/InvoiceLine__c/fields/Gasto__c.field-meta.xml
<CustomField>
    <fullName>Gasto__c</fullName>
    <label>Gasto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alquileres</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Compras</fullName>
            </value>
            <value>
                <fullName>Equipos Informaticos</fullName>
            </value>
            <value>
                <fullName>Formación</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Licencias</fullName>
            </value>
            <value>
                <fullName>NÓMINAS</fullName>
            </value>
            <value>
                <fullName>Otros gastos</fullName>
            </value>
            <value>
                <fullName>Publicidad/Eventos</fullName>
            </value>
            <value>
                <fullName>RETENCIONES</fullName>
            </value>
            <value>
                <fullName>SEGUROS SOCIALES</fullName>
            </value>
            <value>
                <fullName>Servicios de profesionales independientes</fullName>
            </value>
            <value>
                <fullName>Suministros</fullName>
            </value>
            <value>
                <fullName>Trabajos realizados por otras empresas</fullName>
            </value>
            <value>
                <fullName>Transportes y fletes</fullName>
            </value>
            <value>
                <fullName>Vouchers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>