force-app/main/default/objects/InvoiceLine__c/fields/Instructor_Consultor__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Consultor__c</fullName>
    <label>Instructor/Consultor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fernando Andrés</fullName>
            </value>
            <value>
                <fullName>María Arana</fullName>
            </value>
            <value>
                <fullName>Carlos Campillo</fullName>
            </value>
            <value>
                <fullName>Borja Chamorro</fullName>
            </value>
            <value>
                <fullName>Ander Eguiagaray</fullName>
            </value>
            <value>
                <fullName>Blanca Escalera</fullName>
            </value>
            <value>
                <fullName>Marco Esteban</fullName>
            </value>
            <value>
                <fullName>Oriol Farras</fullName>
            </value>
            <value>
                <fullName>Javier Fernandez</fullName>
            </value>
            <value>
                <fullName>Beltrán Gonzalez</fullName>
            </value>
            <value>
                <fullName>Iñaki Hernando</fullName>
            </value>
            <value>
                <fullName>Jesus Iglesias</fullName>
            </value>
            <value>
                <fullName>Nuria M. Quiros</fullName>
            </value>
            <value>
                <fullName>Jesus Maldonado</fullName>
            </value>
            <value>
                <fullName>Antonio Moruno</fullName>
            </value>
            <value>
                <fullName>Cristina Muñoz</fullName>
            </value>
            <value>
                <fullName>Alfonso Ortega</fullName>
            </value>
            <value>
                <fullName>Paula Quirós</fullName>
            </value>
            <value>
                <fullName>Oihane San Martín</fullName>
            </value>
            <value>
                <fullName>Juani Urbano</fullName>
            </value>
            <value>
                <fullName>Jose María Urdiain</fullName>
            </value>
            <value>
                <fullName>Paco Martinez</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>