force-app/main/default/objects/InvoiceLine__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <formula>IF(ISPICKVAL( DiscountType__c , &quot;Percentage&quot;), (1 - Discount__c) * TotalPrice__c, TotalPrice__c -  AmountDiscount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>