force-app/main/default/objects/InvoiceLine__c/fields/PdfDescription__c.field-meta.xml
<CustomField>
    <fullName>PdfDescription__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pdf Description</label>
    <type>Text</type>
</CustomField>