force-app/main/default/objects/InvoiceLine__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0%</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4%</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10%</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21%</label>
            </value>
            <value>
                <fullName>4.5</fullName>
                <label>4.5%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>